# crates/nexus-domain/src/proxy_subserver_error.rs
@@ -1,0 +1,13 @@
+use thiserror::Error;
+
+#[derive(Clone, Copy, Debug, Eq, Error, PartialEq)]
+pub enum ProxySubserverError {
+    #[error("proxy subserver ID is invalid")]
+    InvalidId,
+    #[error("proxy subserver name is invalid")]
+    InvalidName,
+    #[error("proxy subserver host is invalid")]
+    InvalidHost,
+    #[error("proxy subserver port is invalid")]
+    InvalidPort,
+}
